--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@ body {
 
 #countdown {
     min-height: 100vh;
+    width: 100%;
     overflow: hidden;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -39,6 +40,21 @@ body {
     align-items: center;
     font-size: 1.8rem;
     text-align: center;
+    user-select: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.webgl {
+    position: absolute;
+    top: 0;
+    left: 0;
+    outline: none;
+    min-height: 100vh;
+    width: 100%;
+    z-index: 2;
 }
 
 .txt {
