--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
+    pointer-events: none;
 }
 
 .webgl {
@@ -54,7 +55,7 @@ body {
     outline: none;
     min-height: 100vh;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 
 .txt {
