--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,14 @@ body {
     color: var(--neon);
 }
 
+.mt-1 {
+    margin-top: 1rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+
 #countdown {
     min-height: 100vh;
     width: 100%;
@@ -60,6 +68,12 @@ body {
 
 .txt {
     font-size: 2rem;
+    -webkit-animation: clr-change 10s infinite ease-in-out;
+            animation: clr-change 10s infinite ease-in-out;
+}
+
+.txt-sm {
+    font-size: 1.6rem;
     -webkit-animation: clr-change 10s infinite ease-in-out;
             animation: clr-change 10s infinite ease-in-out;
 }
@@ -110,6 +124,10 @@ body {
     .txt {
         font-size: 4rem;
     }
+
+    .txt-sm {
+        font-size: 3.5rem;
+    }
 }
 
 @media (min-width: 48em) {
@@ -119,6 +137,10 @@ body {
 
     .txt {
         font-size: 4.8rem;
+    }
+
+    .txt-sm {
+        font-size: 4rem;
     }
 }
 
@@ -130,6 +152,10 @@ body {
     .txt {
         font-size: 5.5rem;
     }
+
+    .txt-sm {
+        font-size: 4.5rem;
+    }
 }
 
 @media (min-width: 75em) {
@@ -139,6 +165,10 @@ body {
 
     .txt {
         font-size: 6rem;
+    }
+
+    .txt-sm {
+        font-size: 5rem;
     }
 }
 
