--- a/src/style.css
+++ b/src/style.css
@@ -31,8 +31,8 @@ body {
 
 #countdown {
     min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
+    /* width: 100%;
+    overflow: hidden; */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -49,21 +49,29 @@ body {
     font-size: 1.8rem;
     text-align: center;
     user-select: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 2;
     pointer-events: none;
 }
 
+#play {
+    background: none;
+    border: 1px solid var(--neon);
+    border-radius: 0.5rem;
+    font-family: var(--font);
+    font-size: 1.4rem;
+    padding: 1rem;
+    margin: 1rem auto;
+    cursor: pointer;
+}
+
 .webgl {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     outline: none;
     min-height: 100vh;
     width: 100%;
-    z-index: 1;
+    pointer-events: none;
+    /* z-index: 1; */
 }
 
 .txt {
