--- a/src/style.css
+++ b/src/style.css
@@ -61,6 +61,9 @@ body {
     padding: 1rem;
     margin: 1rem auto;
     cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
 }
 
 .webgl {
