--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ body {
     font-family: var(--font);
     background: var(--bg);
     color: var(--neon);
+    position: relative;
 }
 
 .mt-1 {
@@ -64,6 +65,51 @@ body {
     position: absolute;
     top: 1rem;
     left: 1rem;
+}
+
+#play-gui {
+    height: 100vh;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1rem;
+    pointer-events: none;
+    opacity: 0;
+}
+
+#play-gui p {
+    font-size: 1.4rem;
+}
+
+#play-gui p::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: var(--neon);
+}
+
+#play-gui ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+#play-gui ul li {
+    font-size: 1.2rem;
+    list-style: none;
+    padding-left: 1rem;
+}
+
+.keybind {
+    border: 1px solid var(--neon);
+    border-radius: 5px;
+    padding: 3px 10px;
+    background-color: rgba(42, 240, 92, 0.2);
 }
 
 .webgl {
