added play button styles to apple supports query@

--- a/src/style.css
+++ b/src/style.css
@@ -262,6 +262,10 @@ body {
         line-height: 2rem;
     }
 
+    #play {
+        font-family: var(--font-console);
+    }
+
     .txt {
         font-size: 1.6rem;
     }
