--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,23 @@ body {
     margin-top: 2rem;
 }
 
+.loader {
+    background-color: var(--bg);
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading {
+    font-size: 2rem;
+    letter-spacing: 1ch;
+}
+
 #countdown {
     min-height: 100vh;
     display: -webkit-box;
