--- a/src/style.css
+++ b/src/style.css
@@ -289,7 +289,7 @@ body {
         line-height: 2rem;
     }
 
-    #play {
+    #play, #reset {
         font-family: var(--font-console);
     }
 
