--- a/src/style.css
+++ b/src/style.css
@@ -108,11 +108,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 1.4rem;
-    background-color: rgba(42, 240, 92, 0.1);
+    font-size: 1rem;
+    background-color: rgba(4, 19, 8, 0.5);
     border-radius: 1rem;
-    margin-bottom: 3rem;
+    margin: 3rem 1rem;
     padding: 1rem;
+}
+
+#registration_link {
+    display: block;
+    margin: 1rem 0;
 }
 
 #countdown::after {
@@ -206,6 +211,7 @@ body {
 .clr-link-animate {
     color: var(--neon);
     text-decoration: none;
+    cursor: pointer;
     -webkit-animation: clr-change 10s infinite ease-in-out;
             animation: clr-change 10s infinite ease-in-out;
 }
@@ -266,6 +272,10 @@ body {
         font-size: 2rem;
     }
 
+    #details {
+        font-size: 1.2rem;
+    }
+
     .txt {
         font-size: 2.2rem;
     }
@@ -281,6 +291,10 @@ body {
         font-size: 2.2rem;
     }
 
+    #details {
+        font-size: 1.4rem;
+    }
+
     .txt {
         font-size: 2.8rem;
     }
@@ -294,6 +308,12 @@ body {
     /* 992px + */
     #countdown {
         font-size: 2.8rem;
+    }
+
+    #details {
+        font-size: 1.6rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
     }
 
     .txt {
